force-app/main/default/objects/Vaccinations__c/Vaccinations__c.object-meta.xml
<CustomObject>
    <label>Vaccinations</label>
    <nameField>
        <label>Vaccination</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vaccinations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>