force-app/main/default/objects/Vaccinations__c/fields/Animal_Exam__c.field-meta.xml
<CustomField>
    <fullName>Animal_Exam__c</fullName>
    <label>Animal Exam</label>
    <referenceTo>Animal_Exam_Sheet__c</referenceTo>
    <relationshipLabel>Vaccinations</relationshipLabel>
    <relationshipName>Vaccinations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>