force-app/main/default/objects/Vaccinations__c/fields/Date_and_Time__c.field-meta.xml
<CustomField>
    <fullName>Date_and_Time__c</fullName>
    <formula>Animal_Exam__r.Exam_Date_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date and Time</label>
    <type>DateTime</type>
</CustomField>