force-app/main/default/objects/Vaccinations__c/fields/Rabies__c.field-meta.xml
<CustomField>
    <fullName>Rabies__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rabies</label>
    <type>Checkbox</type>
</CustomField>